--- a/index.html
+++ b/index.html
@@ -10,29 +10,16 @@
 		<link rel="stylesheet" href="css/font-mfizz.css">
 	</head>
 	<body>
-		<nav class="white" role="navigation">
-    		<div class="nav-wrapper container">
-				<a id="logo-container" href="#" class="brand-logo black-text"><i class="material-icons circle">developer_mode</i></a>
-				
-  				<ul class="right hide-on-med-and-down">
-        			<li><a href="#" class="black-text">Navbar Link</a></li>
-      			</ul>
-      			<ul id="nav-mobile" class="side-nav">
-        			<li><a href="#">Navbar Link</a></li>
-      			</ul>
-      			<a href="#" data-activates="nav-mobile" class="button-collapse"><i class="material-icons">menu</i></a>
-    		</div>
-  		</nav>
-    	<div class="parallax-container">
-    		<div class="section no-pad-bot">
-    			<div class="container">
-					<h2 id="nom" class="header text-lighten-2 center">Nicolas Kircun</h2>
-					<div class="row center">
-						<h5 id="presentation" class="header col s12 white-text">Présentation de mon parcours, de mes compétences et de mes expériences professionelles</h5>
-					</div>
-    			</div>
-    		</div>
-      		<div class="parallax"><img src="images/pres.jpeg"></div>
+		<div class="navbar-fixed">
+			<nav>
+				<div class="nav-wrapper">
+					<a href="#!" class="brand-logo"><i class="icon-shell" style="font-size: 1em;"></i></a>
+					<a href="#" class="brand-logo center">Nicolas Kircun</a>
+					<a class="btn-floating btn-large halfway-fab waves-effect waves-light teal">
+						<i id="contact" class="material-icons">mail</i>
+					</a>
+				</div>
+			</nav>
 		</div>
 		<div class="container">
 			<div class="row">
@@ -45,8 +32,6 @@
 						</div>
 					</div>
 				</div>
-			</div>
-			<div class="row">
 				<div class="col s12">
 					<h4 class="center white-text">Mon parcours</h4>
 					<h5 class="white-text">Scolaire</h5>
@@ -90,6 +75,8 @@
 					</div>
 				</div>
 			</div>
+		</div>
+		<div class="container">
 			<div class="row">
 				<div class="col s12">
 					<h5 class="white-text">Professionel</h5>
@@ -105,6 +92,9 @@
 										<li class="collection-item avatar"><i class="material-icons circle">assessment</i>Application web interne de gestion des stocks</li>
 									</ul>
 								</div>
+								<div class="card-action">
+									<a href="http://www.odyssee-systemes.fr/">Site web</a>
+								</div>
 							</div>
 						</div>
 						<div class="col s4">
@@ -117,6 +107,9 @@
 										<li class="collection-item avatar"><i class="material-icons circle">important_devices</i>Création d'applications web (IoT)</li>
 										<li class="collection-item avatar"><i class="material-icons circle">loop</i>Migration des applications existantes pour une nouvelle version</li>
 									</ul>
+								</div>
+								<div class="card-action">
+									<a href="https://www.busit.com/fr/">Site web</a>
 								</div>
 							</div>
 						</div>
@@ -132,6 +125,9 @@
 										<li class="collection-item avatar"><i class="material-icons circle">device_hub</i>Compatibilité de l'app sur un cluster</li>
 									</ul>
 								</div>
+								<div class="card-action">
+									<a href="https://www.soprasteria.com/fr">Site web</a>
+								</div>
 							</div>
 						</div>
 					</div>
@@ -142,7 +138,15 @@
 					<div class="card">
 						<div class="card-content">
 							<span class="card-title">Compétences</span>
-							<!-- se démerder pour imiter objet Cards avec logo langages/techno -->
+							<i class="icon-javascript"></i>
+							<i class="icon-nodejs"></i>
+							<i id="mongo" class="icon-mongodb"></i>
+							<i class="icon-html5-alt"></i>
+							<i class="icon-css3-alt"></i>
+							<i class="icon-php-alt"></i>
+							<i class="icon-mysql"></i>
+							<i class="icon-jquery"></i>
+							<i class="icon-bootstrap"></i>
 						</div>
 					</div>
 				</div>
@@ -152,9 +156,4 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 	<script src="js/script.js"></script>
-	<script>
-		$(document).ready(function(){
-      		$('.parallax').parallax();
-    	});
-	</script>
 </html>
