--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				<div class="nav-wrapper">
 					<a href="#!" class="brand-logo"><i class="icon-shell" style="font-size: 1em;"></i></a>
 					<a href="#" class="brand-logo center">Nicolas Kircun</a>
-					<a class="btn-floating btn-large halfway-fab waves-effect waves-light teal">
+					<a class="btn-floating btn-large halfway-fab waves-effect waves-light teal" href="#modal1">
 						<i id="contact" class="material-icons">mail</i>
 					</a>
 				</div>
@@ -27,14 +27,14 @@
 					<div class="card" id="pres">
 						<div class="card-content">
 							<span class="card-title">A propos de moi</span>
-							<p>Intéressé par l'informatique depuis mon plus jeune âge, c'est tous naturellement que je me suis dirigé vers des études dans ce domaine.</p>
+							<p>Intéressé par l'informatique depuis mon plus jeune âge, c'est tout naturellement que je me suis dirigé vers des études dans ce domaine.</p>
 							<p>Durant mes études et mes différentes missions en entreprises, je me suis spécialisé dans le développement web, principalement back-end.</p>
 						</div>
 					</div>
 				</div>
 				<div class="col s12">
-					<h4 class="center white-text">Mon parcours</h4>
-					<h5 class="white-text">Scolaire</h5>
+					<h4 class="center">Mon parcours</h4>
+					<h5>Scolaire</h5>
 					<div class="row">
 						<div class="col s4">
 							<div class="card card-school">
@@ -43,8 +43,8 @@
 									<p>Formation en alternance.</p>
 									<p>Université Nice / Sophia-Antipolis</p>
 								</div>
-								<div class="card-action">
-									<a href="http://unice.fr/iut/departements-denseignements/info">Site web du DUT Informatique</a>
+								<div class="card-action center">
+									<a class="waves-effect waves-light btn" href="http://unice.fr/iut/departements-denseignements/info">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -52,11 +52,11 @@
 							<div class="card card-school">
 								<div class="card-content">
 									<span class="card-title">Licence 3 MIAGE</span>
-									<p>Méthodes Informatiques Appliquées à la Gestion des Entreprises</p>
+									<p>Formation traditionnelle</p>
 									<p>Université Nice / Sophia-Antipolis</p>
 								</div>
-								<div class="card-action">
-									<a href="http://miageprojet2.unice.fr/Licence_MIAGE_3">Site web de la MIAGE (Licence)</a>
+								<div class="card-action center">
+									<a class="waves-effect waves-light btn" href="http://miageprojet2.unice.fr/Licence_MIAGE_3">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -64,11 +64,11 @@
 							<div class="card card-school">
 								<div class="card-content">
 									<span class="card-title">Master MIAGE NTDP</span>
-									<p>Nouvelle Technologies et Direction de Projet</p>
+									<p>Formation en alternance</p>
 									<p>Université Nice / Sophia-Antipolis</p>
 								</div>
-								<div class="card-action">
-									<a href="http://unice.fr/formation/formation-initiale/smiag12121">Site web de la MIAGE (Master NTDP)</a>
+								<div class="card-action center">
+									<a class="waves-effect waves-light btn" href="http://unice.fr/formation/formation-initiale/smiag12121">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -79,7 +79,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
-					<h5 class="white-text">Professionel</h5>
+					<h5>Professionel</h5>
 					<div class="row">
 						<div class="col s4">
 							<div class="card card-pro">
@@ -92,8 +92,8 @@
 										<li class="collection-item avatar"><i class="material-icons circle">assessment</i>Application web interne de gestion des stocks</li>
 									</ul>
 								</div>
-								<div class="card-action">
-									<a href="http://www.odyssee-systemes.fr/">Site web</a>
+								<div class="card-action center">
+									<a class="waves-effect waves-light btn" href="http://www.odyssee-systemes.fr/">Site web  <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -105,11 +105,11 @@
 									<ul class="collection">
 										<li class="collection-item avatar"><i class="material-icons circle">airplay</i>Modification de l'affichage de la plateforme web</li>
 										<li class="collection-item avatar"><i class="material-icons circle">important_devices</i>Création d'applications web (IoT)</li>
-										<li class="collection-item avatar"><i class="material-icons circle">loop</i>Migration des applications existantes pour une nouvelle version</li>
+										<li class="collection-item avatar"><i class="material-icons circle">loop</i>Evolution des Applications interne à la plateforme</li>
 									</ul>
 								</div>
-								<div class="card-action">
-									<a href="https://www.busit.com/fr/">Site web</a>
+								<div class="card-action center">
+									<a class="waves-effect waves-light btn" href="https://www.busit.com/fr/">Site web  <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -118,15 +118,15 @@
 								<div class="card-content">
 									<span class="card-title">Sopra Steria</span>
 									<p>Alternance de 2017 à 2018</p>
-									<p>Evolution de Mov'IT (application web de gestion de projet</p>
+									<p>Application de gestion de projet</p>
 									<ul class="collection">
-										<li class="collection-item avatar"><i class="material-icons circle icon-mongodb"></i>Migration de Mov'IT sur MongoDB</li>
-										<li class="collection-item avatar"><i class="material-icons circle icon-docker"></i>'Dockerisation' de l'application</li>
-										<li class="collection-item avatar"><i class="material-icons circle">device_hub</i>Compatibilité de l'app sur un cluster</li>
+										<li class="collection-item avatar"><i class="material-icons circle icon-mongodb"></i>Migration de Mov'IT sur une base MongoDB</li>
+										<li class="collection-item avatar"><i class="material-icons circle icon-docker"></i>'Compatibilité de l'application avec Docker</li>
+										<li class="collection-item avatar"><i class="material-icons circle">device_hub</i>Compatibilité de l'application sur un cluster</li>
 									</ul>
 								</div>
-								<div class="card-action">
-									<a href="https://www.soprasteria.com/fr">Site web</a>
+								<div class="card-action center">
+									<a class="waves-effect waves-light btn" href="https://www.soprasteria.com/fr">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -138,21 +138,36 @@
 					<div class="card">
 						<div class="card-content">
 							<span class="card-title">Compétences</span>
-							<i class="icon-javascript"></i>
-							<i class="icon-nodejs"></i>
-							<i id="mongo" class="icon-mongodb"></i>
-							<i class="icon-html5-alt"></i>
-							<i class="icon-css3-alt"></i>
-							<i class="icon-php-alt"></i>
-							<i class="icon-mysql"></i>
-							<i class="icon-jquery"></i>
-							<i class="icon-bootstrap"></i>
+							<ul id="technos">
+								<li><i class="icon-nodejs move"></i>NodeJS</li>
+								<li><i class="icon-javascript move"></i>JavaScript</li>
+								<li><i id="mongo" class="icon-mongodb move"></i>MongoDB</li>
+								<li><i class="icon-html5-alt move"></i>HTML5</li>
+								<li><i class="icon-css3-alt move"></i>CSS3</li>
+								<li><i class="icon-php-alt move"></i>PHP</li>
+								<li><i class="icon-java-bold move"></i>Java</li>
+								<li><i class="icon-mysql move"></i>MySQL</li>
+								<li><i class="icon-jquery move"></i>JQuery</li>
+								<li><i class="icon-bootstrap move"></i>Bootstrap</li>
+							</ul>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
+		<div id="modal1" class="modal">
+			<div class="modal-content">
+				<h4>Me contacter</h4>
+				<p>E-mail : <a id="mail" href=""></a></p>
+				<p>Téléphone : <a id="tel" href=""></a></p>
+				<p>Réseaux : <a href="linkedin.com/in/nicolas-kircun-05b884158">LinkedIn</a></p>
+			</div>
+			<div class="modal-footer">
+				<a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">Fermer</a>
+			</div>
+		</div>
 	</body>
+	<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.min.js"></script>
 	<script src="js/script.js"></script>
