--- a/index.html
+++ b/index.html
@@ -138,17 +138,21 @@
 					<div class="card">
 						<div class="card-content">
 							<span class="card-title">Compétences</span>
-							<ul id="technos">
-								<li><i class="icon-nodejs move"></i>NodeJS</li>
-								<li><i class="icon-javascript move"></i>JavaScript</li>
-								<li><i id="mongo" class="icon-mongodb move"></i>MongoDB</li>
-								<li><i class="icon-html5-alt move"></i>HTML5</li>
-								<li><i class="icon-css3-alt move"></i>CSS3</li>
-								<li><i class="icon-php-alt move"></i>PHP</li>
-								<li><i class="icon-java-bold move"></i>Java</li>
-								<li><i class="icon-mysql move"></i>MySQL</li>
-								<li><i class="icon-jquery move"></i>JQuery</li>
-								<li><i class="icon-bootstrap move"></i>Bootstrap</li>
+							<ul class="technos">
+								<li><i class="icon-nodejs move"></i><span id="nodejs">NodeJS</span></li>
+								<li><i class="icon-javascript move"></i><span id="js">JavaScript</span></li>
+								<li><i id="mongo" class="icon-mongodb move"></i><span id="mongodb">MongoDB</span></li>
+								<li><i class="icon-html5-alt move"></i><span id="html5">HTML5</span></li>
+								<li><i class="icon-css3-alt move"></i><span id="css3">CSS3</span></li>
+								<li><i class="icon-php-alt move"></i><span id="php">PHP</span></li>
+								<li><i class="icon-java-bold move"></i><span id="java">Java</span></li>
+							</ul>
+							<ul class="technos">
+								<li><i class="icon-c move"></i><span id="c">C</span></li>
+								<li><i class="icon-mysql move"></i><span id="mysql">MySQL</span></li>
+								<li><i class="icon-jquery move"></i><span id="jquery">JQuery</span></li>
+								<li><i class="icon-bootstrap move"></i><span id="bootstrap">Bootstrap</span></li>
+								<li><i class="icon-ubuntu move"></i><span id="ubuntu">Ubuntu</span></li>
 							</ul>
 						</div>
 					</div>
