finalisation vue ordinateur

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				</div>
 			</nav>
 		</div>
+		<img src="images/profil.png" height="130" width="130" alt="Nicolas Kircun">
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
@@ -39,12 +40,12 @@
 						<div class="col s4">
 							<div class="card card-school">
 								<div class="card-content">
-									<span class="card-title">DUT Informatique</span>
-									<p>Formation en alternance.</p>
+									<span class="card-title">Master MIAGE NTDP</span>
+									<p>Formation en alternance</p>
 									<p>Université Nice / Sophia-Antipolis</p>
 								</div>
 								<div class="card-action center">
-									<a class="waves-effect waves-light btn" href="http://unice.fr/iut/departements-denseignements/info">Site web <i class="material-icons right">open_in_new</i></a>
+									<a class="waves-effect waves-light btn" target="_blank" href="http://unice.fr/formation/formation-initiale/smiag12121">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -56,19 +57,19 @@
 									<p>Université Nice / Sophia-Antipolis</p>
 								</div>
 								<div class="card-action center">
-									<a class="waves-effect waves-light btn" href="http://miageprojet2.unice.fr/Licence_MIAGE_3">Site web <i class="material-icons right">open_in_new</i></a>
+									<a class="waves-effect waves-light btn" target="_blank" href="http://miageprojet2.unice.fr/Licence_MIAGE_3">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
 						<div class="col s4">
 							<div class="card card-school">
 								<div class="card-content">
-									<span class="card-title">Master MIAGE NTDP</span>
-									<p>Formation en alternance</p>
+									<span class="card-title">DUT Informatique</span>
+									<p>Formation en alternance.</p>
 									<p>Université Nice / Sophia-Antipolis</p>
 								</div>
 								<div class="card-action center">
-									<a class="waves-effect waves-light btn" href="http://unice.fr/formation/formation-initiale/smiag12121">Site web <i class="material-icons right">open_in_new</i></a>
+									<a class="waves-effect waves-light btn" target="_blank" href="http://unice.fr/iut/departements-denseignements/info">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -84,16 +85,17 @@
 						<div class="col s4">
 							<div class="card card-pro">
 								<div class="card-content">
-									<span class="card-title">Odyssée Systèmes</span>
-									<p>Alternance de 2013 à 2015 dans le cadre de mon DUT Informatique</p>
+									<span class="card-title">Sopra Steria</span>
+									<p>Alternance de 2017 à 2018</p>
+									<p>Application de gestion de projet</p>
 									<ul class="collection">
-										<li class="collection-item avatar"><i class="material-icons circle">build</i>Montage de calculateurs embarqués</li>
-										<li class="collection-item avatar"><i class="material-icons circle">group</i>Application web interne de gestion de projet</li>
-										<li class="collection-item avatar"><i class="material-icons circle">assessment</i>Application web interne de gestion des stocks</li>
+										<li class="collection-item avatar"><i class="material-icons circle icon-mongodb"></i>Migration de Mov'IT sur une base MongoDB</li>
+										<li class="collection-item avatar"><i class="material-icons circle icon-docker"></i>'Compatibilité de l'application avec Docker</li>
+										<li class="collection-item avatar"><i class="material-icons circle">device_hub</i>Compatibilité de l'application sur un cluster</li>
 									</ul>
 								</div>
 								<div class="card-action center">
-									<a class="waves-effect waves-light btn" href="http://www.odyssee-systemes.fr/">Site web  <i class="material-icons right">open_in_new</i></a>
+									<a class="waves-effect waves-light btn" target="_blank" href="https://www.soprasteria.com/fr">Site web <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -109,24 +111,23 @@
 									</ul>
 								</div>
 								<div class="card-action center">
-									<a class="waves-effect waves-light btn" href="https://www.busit.com/fr/">Site web  <i class="material-icons right">open_in_new</i></a>
+									<a class="waves-effect waves-light btn" target="_blank" href="https://www.busit.com/fr/">Site web  <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
 						<div class="col s4">
 							<div class="card card-pro">
 								<div class="card-content">
-									<span class="card-title">Sopra Steria</span>
-									<p>Alternance de 2017 à 2018</p>
-									<p>Application de gestion de projet</p>
+									<span class="card-title">Odyssée Systèmes</span>
+									<p>Alternance de 2013 à 2015 dans le cadre de mon DUT Informatique</p>
 									<ul class="collection">
-										<li class="collection-item avatar"><i class="material-icons circle icon-mongodb"></i>Migration de Mov'IT sur une base MongoDB</li>
-										<li class="collection-item avatar"><i class="material-icons circle icon-docker"></i>'Compatibilité de l'application avec Docker</li>
-										<li class="collection-item avatar"><i class="material-icons circle">device_hub</i>Compatibilité de l'application sur un cluster</li>
+										<li class="collection-item avatar"><i class="material-icons circle">build</i>Montage de calculateurs embarqués</li>
+										<li class="collection-item avatar"><i class="material-icons circle">group</i>Application web interne de gestion de projet</li>
+										<li class="collection-item avatar"><i class="material-icons circle">assessment</i>Application web interne de gestion des stocks</li>
 									</ul>
 								</div>
 								<div class="card-action center">
-									<a class="waves-effect waves-light btn" href="https://www.soprasteria.com/fr">Site web <i class="material-icons right">open_in_new</i></a>
+									<a class="waves-effect waves-light btn" target="_blank" href="http://www.odyssee-systemes.fr/">Site web  <i class="material-icons right">open_in_new</i></a>
 								</div>
 							</div>
 						</div>
@@ -158,13 +159,24 @@
 					</div>
 				</div>
 			</div>
+			<div class="row">
+				<div class="col s12">
+					<div class="card">
+						<div class="card-content">
+							<span class="card-title">Autres expériences professionnelles</span>
+							<p>Mise en rayon / vente à la boulangerie Auchan Grasse (avril 2017 - juillet 2017)</p>
+							<p>Aide dans une plantation de roses (été 2013)</p>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
 		<div id="modal1" class="modal">
 			<div class="modal-content">
 				<h4>Me contacter</h4>
 				<p>E-mail : <a id="mail" href=""></a></p>
 				<p>Téléphone : <a id="tel" href=""></a></p>
-				<p>Réseaux : <a href="linkedin.com/in/nicolas-kircun-05b884158">LinkedIn</a></p>
+				<p>Réseaux : <a target="_blank" href="https://www.linkedin.com/in/nicolas-kircun-05b884158/">LinkedIn</a></p>
 			</div>
 			<div class="modal-footer">
 				<a href="#" class="modal-action modal-close waves-effect waves-green btn-flat">Fermer</a>
