--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</div>
 			</nav>
 		</div>
-		<img src="images/profil.png" height="130" width="130" alt="Nicolas Kircun">
+		<img id="profil" src="images/profil.png" height="130" width="130" alt="Nicolas Kircun">
 		<div class="container">
 			<div class="row">
 				<div class="col s12">
@@ -168,6 +168,32 @@
 							<p>Aide dans une plantation de roses (été 2013)</p>
 						</div>
 					</div>
+				</div>
+			</div>
+			<div class="row">
+				<div class="slider">
+					<ul class="slides">
+						<li>
+							<img src="images/music.jpg">
+							<div id="music" class="caption left-align black">
+								<h3 class="white-text">Passionné de musique !</h3>
+								<p class="space grey-text">Je m'essaie également à la production</p>
+							</div>
+						</li>
+						<li>
+							<img src="images/cinema.jpg">
+							<div id="cinema" class="caption center-align white">
+								<h3 class="black-text">Grand fan de cinéma</h3>
+								<p class="light black-text text-lighten-3">Ainsi que de séries et animations</p>
+							</div>
+						</li>
+						<li>
+							<img src="images/ski.jpg">
+							<div class="caption right-align black">
+								<h3>Amateur de glisse !</h3>
+							</div>
+						</li>
+					</ul>
 				</div>
 			</div>
 		</div>
